# Web_scraping_selenium

./: README.md  nb.py  pyproject.toml  scraper.py  trending.html  videos_trending.csv
